fix: scrollbar style fixes for document/titlebar

--- a/src/app.css
+++ b/src/app.css
@@ -32,26 +32,34 @@ html {
   -ms-scroll-chaining: none;
 }
 
-/* Global scrollbar styles */
-::-webkit-scrollbar {
-  width: 8px;
-}
+/* prettier-ignore */
+@supports selector(::-webkit-scrollbar) {
+  /* Global scrollbar styles */
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
 
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-text) / 0.3);
-  background-color: rgba(var(--scrollbar-track-color));
-  border-radius: 4px;
-}
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(var(--scrollbar-track-color) / 0.3);
+    background-color: rgba(var(--scrollbar-track-color) / 0.05);
+    border-radius: 4px;
+  }
 
-::-webkit-scrollbar-thumb {
-  background-color: rgba(var(--scrollbar-thumb-color) / 0.8);
-  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
-  border-radius: 999px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(var(--scrollbar-thumb-color) / 0.6);
-  -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
-  border-radius: 999px;
+  ::-webkit-scrollbar-thumb {
+    /* background-color: rgba(var(--scrollbar-thumb-color) / 0.8); */
+    -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
+    background-color: rgba(var(--scrollbar-track-color));
+    border-radius: 999px;
+    /* border: 2px solid transparent; */
+    /* background-clip: padding-box; */
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    /* background-color: rgba(var(--scrollbar-thumb-color) / 0.6); */
+    background-color: rgba(var(--scrollbar-track-color));
+    -webkit-box-shadow: inset 0 0 6px rgba(var(--color-base) / 0.3);
+    /* border: 0; */
+  }
 }
 
 /* Firefox */
